z Roboty doker pliki

--- a/dock-python/python/templates/index.html
+++ b/dock-python/python/templates/index.html
@@ -3,7 +3,7 @@
 <html lang="pl">
 <head>
     <meta charset="UTF-8">
-    <title>Logowanie</title>
+    <title>Logowanie i pliki</title>
 </head>
 <body>
     <h1>Zaloguj się</h1>
@@ -15,6 +15,14 @@
         <input type="password" id="password" name="password" required>
         <br><br>
         <button type="submit">Zaloguj</button>
+    </form>
+
+     <h1>Wyślij plik</h1>
+    <form action="/file_upload" method="POST" enctype="multipart/form-data">
+        <label for="plik">Wybierz plik:</label>
+        <input type="file" id="plik" name="plik" required>
+        <br><br>
+        <button type="submit">Wyślij</button>
     </form>
 </body>
 </html>
