z Roboty doker pliki obrazki

--- a/dock-python/python/templates/index.html
+++ b/dock-python/python/templates/index.html
@@ -24,5 +24,6 @@
         <br><br>
         <button type="submit">Wyślij</button>
     </form>
+<img src="/img/111.jpg" alt="obrazek"/>
 </body>
 </html>
