--- a/djangonauki/src/moj_projekt/templates/todolist.html
+++ b/djangonauki/src/moj_projekt/templates/todolist.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
-    <title>Todo List</title>
+    <title>Lista</title>
 </head>
 <body>
     <!-- Todo list with boostrap -->
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-12 col-lg-8 col-xl-6 mt-4">
-                <h1 class="text-center">Todo List</h1>
+                <h1 class="text-center">Lista</h1>
                 {% if edit_item %}
                 <form action="/todo/{{edit_item.id}}/update" method="POST">{% csrf_token %}
                     <div class="form-group">
@@ -27,10 +27,10 @@
                 {% else %}
                 <form action="/todo/" method="POST">{% csrf_token %}
                     <div class="form-group">
-                        <label for="todo" class="ms-2">Add a new item:</label>
+                        <label for="todo" class="ms-2">Dodaj nową pozycję:</label>
                         <div class="input-group">
-                            <input type="text" class="form-control" name="content" id="todo" placeholder="Enter todo">
-                            <button type="submit" class="btn btn-primary">Add Item</button>
+                            <input type="text" class="form-control" name="content" id="todo" placeholder="Wpis">
+                            <button type="submit" class="btn btn-primary">Dodaj element</button>
                         </div>
                     </div>
                 </form>
@@ -42,7 +42,7 @@
                 <table class="table">
                     <thead>
                         <tr class="d-flex">
-                            <th scope="col" class="col-8">Todo Item:</th>
+                            <th scope="col" class="col-8">Pozycje listy:</th>
                             <!-- <th scope="col" class="col-4">Actions:</th> -->
                         </tr>
                     </thead>
@@ -65,5 +65,5 @@
                 </table>
             </div>
         </div>
-</body>
+    </div></body>
 </html>
