--- a/djangonauki/src/moj_projekt/templates/todolist.html
+++ b/djangonauki/src/moj_projekt/templates/todolist.html
@@ -55,8 +55,8 @@
                                 <p>Editing this todo item... </p>
                                 <a href="/"> Cancel</a>
                                 {% else %}
-                                <a href="/todo/{{ todo.id }}/edit" class="btn btn-primary">Eytuj</a>
-                                <a href="/todo/{{ todo.id }}/delete" class="btn btn-danger">Usuń</a>
+                                <a href="{% url 'EditTodo' item_id=todo.id %}" class="btn btn-primary">Edytuj</a>
+                                <a href="{% url 'DeleteTodo' item_id=todo.id %}" class="btn btn-danger">Usuń</a>
                                 {% endif %}
                             </td>
                         </tr>
