--- a/djangonauki/src/moj_projekt/templates/todolist.html
+++ b/djangonauki/src/moj_projekt/templates/todolist.html
@@ -4,28 +4,34 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
     <title>Lista</title>
 </head>
 <body>
-    <!-- Todo list with boostrap -->
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-12 col-lg-8 col-xl-6 mt-4">
                 <h1 class="text-center">Lista</h1>
+
                 {% if edit_item %}
-                <form action="/todo/{{edit_item.id}}/update" method="POST">{% csrf_token %}
+                <!-- Formularz aktualizacji -->
+                <form action="{% url 'UpdateTodo' item_id=edit_item.id %}" method="POST">
+                    {% csrf_token %}
                     <div class="form-group">
-                        <label for="todo" class="ms-2">Editing item:</label>
+                        <label for="todo" class="ms-2">Edytowana pozycja:</label>
                         <div class="input-group mb-3">
-                            <input type="text" class="form-control" name="content" value="{{edit_item.content}}" placeholder="Enter your todo item" aria-label="Enter your todo item" aria-describedby="button-addon2">
-                            <button class="btn btn-info" type="submit" id="button-addon2">Update</button>
+                            <input type="text" class="form-control" name="content"
+                                   value="{{ edit_item.content }}"
+                                   placeholder="Enter your todo item">
+                            <button class="btn btn-info" type="submit">Aktualizuj</button>
                         </div>
                     </div>
                 </form>
                 {% else %}
-                <form action="/todo/" method="POST">{% csrf_token %}
+                <!-- Formularz dodawania -->
+                <form action="{% url 'addTodo' %}" method="POST">
+                    {% csrf_token %}
                     <div class="form-group">
                         <label for="todo" class="ms-2">Dodaj nową pozycję:</label>
                         <div class="input-group">
@@ -37,6 +43,7 @@
                 {% endif %}
             </div>
         </div>
+
         <div class="row justify-content-center">
             <div class="col-md-12 col-lg-8 col-xl-6">
                 <table class="table">
@@ -52,14 +59,11 @@
                             <td class="col-8">{{ todo.content }}</td>
                             <td class="col-4 btn-group" role="group">
                                 {% if edit_item and edit_item.id == todo.id %}
-                                <p>Editing this todo item... </p>
-                                <a href="/"> Cancel</a>
+                                    <p>Edytujesz tą pozycję...</p>
+                                    <a href="{% url 'todolist' %}">Anuluj</a>
                                 {% else %}
-                                <a href="/todo/{{ todo.id }}/edit" class="btn btn-primary">Eytuj</a>
-                                <form action="/todo/{{todo.id}}/delete" method="POST">
-                                    {% csrf_token %}
-                                    <button type="submit" class="btn btn-danger">Usuń</button>
-                                </form>
+                                    <a href="{% url 'EditTodo' item_id=todo.id %}" class="btn btn-primary">Edytuj</a>
+                                    <a href="{% url 'DeleteTodo' item_id=todo.id %}" class="btn btn-danger">Usuń</a>
                                 {% endif %}
                             </td>
                         </tr>
@@ -68,5 +72,6 @@
                 </table>
             </div>
         </div>
-    </div></body>
+    </div>
+</body>
 </html>
