--- a/djangonauki/django_helikon/strona/blog/templates/blog/post/detail.html
+++ b/djangonauki/django_helikon/strona/blog/templates/blog/post/detail.html
@@ -1,10 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends "blog/baza.html" %}
 
-</body>
-</html>
+{% block title %}{{ post.title }}{% endblock %}
+
+{%block content %}
+
+    <h1>{{ post.title }}</h1>
+    <p class="date">
+        Opublikowany {{ post.publish }} przez {{ post.author }}
+    </p>
+    {{ post.body|linebreaks }}
+
+{% endblock %}
